--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,9 +6,9 @@
       "type": "python",
       "request": "launch",
       "program": "${workspaceFolder}/main.py",
-    //   "args": ["tests/or_xor_conclusion.txt"],
-      "args": ["tests/_correction/test_neg5"],
-      "cwd": "${workspaceFolder}",
+      //   "args": ["tests/or_xor_conclusion.txt"],
+      "args": ["tests/_examples/good_files/NEGATION_SIMPLE_2"],
+      "cwd": "${workspaceFolder}"
     }
   ]
 }
