--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,8 @@
       "request": "launch",
       "program": "${workspaceFolder}/main.py",
       //   "args": ["tests/or_xor_conclusion.txt"],
-      "args": ["tests/_examples/good_files/NEGATION_SIMPLE_2"],
+    //   "args": ["tests/_examples/good_files/NEGATION_SIMPLE_2"],
+      "args": ["tests/_examples/good_files/empty_init_test.txt"],
       "cwd": "${workspaceFolder}"
     }
   ]
