wip: error handling

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
       "program": "${workspaceFolder}/main.py",
       //   "args": ["tests/or_xor_conclusion.txt"],
     //   "args": ["tests/_examples/good_files/NEGATION_SIMPLE_2"],
-      "args": ["tests/_examples/good_files/empty_init_test.txt"],
+      "args": ["tests/_examples/good_files/parenthesis.txt"],
+    //   "args": ["tests/_examples/good_files/empty_init_test.txt"],
       "cwd": "${workspaceFolder}"
     }
   ]
