chore: add some tests and clean up code

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,10 @@
       "request": "launch",
       "program": "${workspaceFolder}/main.py",
       //   "args": ["tests/or_xor_conclusion.txt"],
-    //   "args": ["tests/_examples/good_files/NEGATION_SIMPLE_2"],
-      "args": ["tests/_examples/good_files/parenthesis.txt"],
-    //   "args": ["tests/_examples/good_files/empty_init_test.txt"],
+      //   "args": ["tests/_examples/good_files/NEGATION_SIMPLE_2"],
+      //   "args": ["tests/_examples/good_files/parenthesis.txt"],
+      "args": ["tests/_correction/parentheses"],
+      //   "args": ["tests/_examples/good_files/empty_init_test.txt"],
       "cwd": "${workspaceFolder}"
     }
   ]
